force-app/main/default/objects/Affiliation_to_Consent_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>News__c</fullName>
        <defaultValue>false</defaultValue>
        <label>News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Research__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work</label>
        <type>Checkbox</type>
    </fields>
    <label>Affiliation to Consent Mapping</label>
    <pluralLabel>Affiliation to Consent Mappings</pluralLabel>
</CustomObject>